// Copyright 2016 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package crimson;

service Crimson {
  rpc CreateIPRange (IPRange) returns (IPRangeStatus) {}
  rpc ReadIPRange (IPRangeQuery) returns (IPRanges) {}
  rpc DeleteIPRange (IPRangeDeleteList) returns (IPRangeStatus) {}

  rpc CreateHost (HostList) returns (HostStatus) {}
  rpc ReadHost (HostQuery) returns (HostList) {}
  rpc DeleteHost (HostDeleteList) returns (HostStatus) {}
}

message IPRanges {
  repeated IPRange ranges = 1;
}

message IPRange {
  string site = 1;
  uint32 vlan_id = 2;
  string start_ip = 3;
  string end_ip = 4;
  string vlan_alias = 5;
}

message IPRangeStatus {
  string error = 1;
}

message IPRangeQuery {
  string site = 1;
  uint32 vlan_id = 2;
  uint32 limit = 3;
  string ip = 4;
  string vlan_alias = 5;
}

// Keep compatible with IPRangeQuery.
message IPRangeDelete {
  string site = 1;
  uint32 vlan_id = 2;
}

message IPRangeDeleteList {
  repeated IPRangeDelete ranges = 1;
}

message Host {
  string site = 1;
  string hostname = 2;
  string mac_addr = 3;
  string ip = 4;
  string boot_class = 5;
}

message HostList {
  repeated Host hosts = 1;
}

// Use the same numbers and fields here than as the 'Host' message, so as to
// make it a compatible subset of it, in case we want to merge them in the 
// future.
message HostDelete {
  string hostname = 2;
  string mac_addr = 3;
}

// Use the same numbers and fields here than as the 'Host' message, so as to
// make it a compatible subset of it, in case we want to merge them in the 
// future.
message HostDeleteList {
  repeated HostDelete hosts = 1;
}

message HostStatus { }

message HostQuery {
  uint32 limit = 1;
  string site = 2;
  string hostname = 3;
  string mac_addr = 4;
  string ip = 5;
  string boot_class = 6;
}